--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,15 @@
             <version>5.7.20</version>
         </dependency>
 
+        <!--图像验证码-->
+        <!-- https://mvnrepository.com/artifact/com.github.axet/kaptcha -->
+        <dependency>
+            <groupId>com.github.axet</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>0.0.9</version>
+        </dependency>
+
+
 
     </dependencies>
 
