--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
             <version>6.0.16.Final</version>
         </dependency>
 
+        <!--websocket-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
 
     </dependencies>
 
